<resources>
    <string name="app_name">FakeStoreApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="here">Here</string>
    <string name="to_signup_click">To Signup click</string>
    <string name="name">Name</string>
    <string name="signup">Signup</string>
    <string name="horizontal_products">Horizontal Products</string>
    <string name="vertical_products">Vertical Products</string>
    <string name="categories">Categories</string>
</resources>